# slow-frp

./: LICENSE  README.md  slow-frp.cabal  stack.yaml  time.sh
src/: FoldVersion.hs  Main.hs  ReactiveVersion.hs  Shared.hs
