name:                slow-frp
version:             0.1.0.0
synopsis:            Why is this slow
description:         Please see README.md
homepage:            http://github.com/githubuser/slow-frp#readme
license:             BSD3
license-file:        LICENSE
author:              unknownloner
maintainer:          dash@ukl.me
copyright:           2015 unknownloner
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable slow-frp
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , reactive-banana >= 1.0.0.0
                     , bytestring
